[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/EnemySpawnPosition.gd" type="Script" id=1]

[node name="EnemySpawnPosition" type="Node2D"]
script = ExtResource( 1 )

[node name="Position1" type="Position2D" parent="." groups=["Spawn"]]
position = Vector2( -819, -537 )

[node name="Position2" type="Position2D" parent="." groups=["Spawn"]]
position = Vector2( -839, 588 )

[node name="Position3" type="Position2D" parent="." groups=["Spawn"]]
position = Vector2( 914, 647 )

[node name="Position4" type="Position2D" parent="." groups=["Spawn"]]
position = Vector2( 782, -579 )

[node name="SpawnTimer" type="Timer" parent="."]
